--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,26 @@
-# macOS
+# build output
+dist/
+.output/
+
+# dependencies
+node_modules/
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# environment variables
+.env
+.env.production
+
+# macOS-specific files
 .DS_Store
-.AppleDouble
-.LSOverride
 
-# Windows
-Thumbs.db
-ehthumbs.db
-Desktop.ini
-
-# Editor directories and files
+# IDE
 .vscode/
 .idea/
-*.swp
-*.swo
-*~
 
-# Temporary files
-*.log
-*.tmp
-.cache/
-
-# Environment files
-.env
-.env.local
-
-# Build files (if you add build tools later)
-node_modules/
-dist/
-build/
-
-# Backup files
-*.bak
-*.backup
+# Astro
+.astro/
